--- a/src/main/webapp/css/stock.css
+++ b/src/main/webapp/css/stock.css
@@ -4,11 +4,20 @@ html, body {
 margin: 0;
 padding: 0;
 height: 100%;
+width: 100%;
+}
+html{
+	overflow: scroll;
+}
+body, div, dl,dt,dd,ul,ol,li, h1,h2,h3,h4,h5,h6, form, fieldset, p, button {
+   margin: 0;
+   padding: 0;
 }
 .header {
 width: 100%;
 height: 15%;
 background: yellow;
+text-align: center;
 }
 .nav{
 width: 15%;
