--- a/src/main/webapp/css/stock.css
+++ b/src/main/webapp/css/stock.css
@@ -5,14 +5,19 @@ margin: 0;
 padding: 0;
 height: 100%;
 width: 100%;
-overflow: auto;
+text-align: center;
 }
 html{
-	overflow: scroll;
+
 }
 body, div, dl,dt,dd,ul,ol,li, h1,h2,h3,h4,h5,h6, form, fieldset, p, button {
    margin: 0;
    padding: 0;
+}
+body{
+	width: 1800px;
+	text-align: center;
+
 }
 .header {
 width: 100%;
@@ -35,57 +40,111 @@ background: rgb(255, 255, 255);
 .section {
 width: 80%;
 height: 800px;
-display: inline-block;
+
 text-align: center;
-background: olivedrab;
+background: white;
+margin: 0 auto;
 
-
-border: 10px solid #000;
 }
 .footer {
 width: 80%;
 height: 15%;
 margin: 0 auto;
-/* clear: both; */
-display: flex;
+/* clear: both;*/
 text-align: center;
 background: plum;
 }
+/* 이미지슬라이드 */
 .image{
 	width: 50%;
 	height: 100%;
-	margin: 0 auto;    
+	margin: 0 auto;  
+	padding: 10px;
 	float: left;
-	border: 1px solid #ff0;
+	text-align:center
 }
-/* 아이디값들은 jsp로 넘기자 */
-#img-main{
+.carousel-container {
 	width: 100%;
-	height: 80%;
-
-	margin: 0 auto;
-	
-	background-color: yellow;
-	
-}
-#img-main > img{
-	width:100%;
-    height:100%;
-    padding: 10px;
-    object-fit:cover;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    border:1px solid black;
-}
-#img-slide{
-	width:100%;
-    height:20%;
+	height: 100%;
+	position: relative;
 	margin: 0 auto;
 	padding: 10px;
-	display: inline-block;
-	background-color: black;
+    object-fit:cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    object-fit:cover;
+    overflow-y: hidden;
+	display: compact;
+	display:inline-block
+	
 }
+.navigation .prev {
+  position: absolute;
+  z-index: 10;
+  font-size: 30px;
+  top: 40%;
+  left: 10px;
+  font-weight: 800;
+}
+.navigation .next {
+  right: 10px;
+  position: absolute;
+  font-size: 30px;
+  z-index: 10;
+  top: 40%;
+  font-weight: 800;
+}
+.navigation .nav-btn {
+  background: rgba(255, 255, 255, 0.55);
+  cursor: pointer;
+  border-radius: 100%;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
+}
+.navigation .nav-btn:hover {
+  background: white;
+}
+.carousel {
+  margin-top: 20px;
+  transition: all 0.3s ease;
+
+}
+.carousel img {
+  width: 100%;
+  height: 100%;
+  transition: all 0.3s ease;
+  border:8px solid white;
+}
+
+.item {
+  position: absolute;
+  display: none;
+}
+
+.main {
+  display: block;
+}
+.caption {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  font-size: 20px;
+  justify-content: center;
+  align-items: center;
+  color: rgb(255, 255, 255);
+  background: rgba(0, 0, 0, 0.3);
+  height: 35px;
+}
+/* 이미지슬라이드 */
+
 .stock-detail{
 	width: 50%;
 	height: 100%;
@@ -174,8 +233,8 @@ background: plum;
 	border: 1px solid #00f
 }
 .like-buy-mycart > input{
-	margin-right: 50px;
-	width: 150px;
+	margin-right: 20px;
+	width: 100px;
 	height: 100px;
 	
 }
