--- a/src/main/webapp/css/radiant_Main.css
+++ b/src/main/webapp/css/radiant_Main.css
@@ -115,13 +115,14 @@ a {
 	margin-top: 0;
 }
 
-
 .dropDownMenu {
     position: absolute;
     display: none;
     width: 100%;
     left: 0;
-    padding-top : 7px;
+    padding-top : 10px;
+    border: 1.5px solid #aaa;
+    background: #ffffffee;
 }
 
 .dropDownMenu li {
@@ -131,6 +132,89 @@ a {
 #mainNav > ul > li:hover .dropDownMenu {
     display: block;
 }
+
+/* 전체메뉴 버튼 */
+#allMenu {
+	display: none;	
+}
+
+#allMenuToggle {
+	visibility: visible;
+	position: relative;
+	width: 80%;
+	height: 250px;
+	margin: 0 auto;
+	margin-bottom: 30px;
+	margin-top: -10px;
+	border: 2px solid #999;
+	border-top: 0;
+}
+
+#allMenuToggle #menuClose {
+	position: relative;
+	left: 13px;
+	visibility: hidden;
+}
+
+#allMenuToggle #menuClose img {
+	width: 40px;
+	height: 30px;
+}
+
+#allMenuToggle .hiddenMenu, #allMenuToggle #visibleMenu {
+	display: inline-block;
+	vertical-align: top;
+	font-size: 10pt;
+}
+
+#allMenuToggle .hiddenMenu:after, #allMenuToggle #visibleMenu:after {
+	content: '|';
+	padding: 10px;
+	color: #999;
+	visibility: hidden;
+}
+
+#allMenuToggle .hiddenMenu li {
+	position: relative;
+	display: inline-block;
+	padding: 0 35px;
+	font-size: 10pt;
+	visibility: hidden;
+}
+
+#allMenuToggle:after {
+	display: block;
+	content: '';
+	clear: both;
+}
+
+#allMenuToggle #visibleMenu li {
+	position: relative;
+	display: inline-block;
+	padding: 0 35px;
+	font-size: 10pt;
+}
+
+#allMenuToggle #visibleMenu li a {
+	visibility: hidden;
+}
+
+#allMenuToggle #visibleMenu li .dropDownMenu1 {
+	position: absolute;
+	width: 100%;
+	top: -40;
+	left: 0;
+}
+
+#allMenuToggle #visibleMenu li .dropDownMenu1 li {
+	padding: 7px 0;
+	display: block;
+}
+
+#allMenuToggle #visibleMenu li .dropDownMenu1 li a {
+	visibility: visible;
+}
+
 
 /* imgSlide */
 #imgSlideDiv {
