--- a/src/main/webapp/css/radiant_Main.css
+++ b/src/main/webapp/css/radiant_Main.css
@@ -68,9 +68,11 @@ a {
     text-align: center;
     top: 0;
     padding-top: 20px;
+    margin: 0 auto;
     margin-bottom: 0;
     background: white;
     opacity: 0.8;
+    width: 1600px;
 
 }
 
@@ -141,11 +143,11 @@ a {
 #allMenuToggle {
 	visibility: visible;
 	position: relative;
-	width: 80%;
+	width: 1600px;
 	height: 250px;
 	margin: 0 auto;
 	margin-bottom: 30px;
-	margin-top: -10px;
+	margin-top: -12px;
 	border: 2px solid #999;
 	border-top: 0;
 }
