--- a/src/main/webapp/css/stock.css
+++ b/src/main/webapp/css/stock.css
@@ -150,46 +150,54 @@ background: plum;
 	height: 100%;
 	padding: 10px;
 	float: right;
-	box-sizing: border-box;
-	
-	border: 1px solid #0ff
 }
 #stock-title{
 	width: 100%;
 	height: 20%;
 	padding: 10px;
-	box-sizing: border-box;
-	
-	border: 1px solid #0ff
+}
+#stock-title span{
+	float: left;
+}
+#stock-title h3{
+	float: left;
 }
 #stock-list{
 	width: 100%;
-	height: 60%;
-	
-	
-	
-	border: 1px solid #ff0;
+	height: 30%;
+	float: left;
 }
+
 #stock-color{
 	height: 40%;
 }
 #stock-index-color{
 	width: 20%;
 	height: 100%;
-	padding: 0 auto;
+	padding: 30px;
 	margin: 0 auto;
 	float: left;
-	
-	border: 1px solid #ff0;
 }
 #color-index-list{
 	width: 80%;
 	height: 100%;
 	padding: 10px;
-	box-sizing: border-box;
-	float: right;
+	position: relative;
+	display: flex;
+}
+.selected{
+	width: 300px;
+}
+.selected option{
+	text-align: center;
+	text-transform: uppercase;
+	font-size: 20pt;
 	
-	border: 1px solid #0ff
+}
+div .show-color{
+	width: 70px;
+	height:70px;
+	justify-content: space-evenly;
 }
 #color-index-list > div{
 	display: inline-block;
@@ -198,45 +206,73 @@ background: plum;
 	width: 100%;
 	height: 40%;
 	display: inline-block;
-	border: 1px solid #ff0;
 }
 #stock-index-size{
 	width: 20%;
 	height: 100%;
-	padding: 0 auto;
+	padding: 30px;
 	margin: 0 auto;
 	float: left;
-	
-	
-	border: 1px solid #ff0;
 }
 #size-index-list{
 	width: 80%;
 	height: 100%;
 	padding: 10px;
-	float: right;
-	box-sizing: border-box;
-	
-	border: 1px solid #0ff
+	position: relative;
+	display: flex;
 }
 #size-index-list > div{
 	display: inline-block;
 }
+.stock-detail-para{
+	font-size: 15pt;
+	text-align: left;
+}
 .like-buy-mycart{
-	width: 100%;
-	height: 20%;
+	width: 600px;
+	height: 50px;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	top: 200px;
 	padding: 20px 0;
+	position: relative;
+	bottom: 0;
 	display: inline-block;
 	text-align: center;
-	box-sizing: border-box;
-	
-	border: 1px solid #00f
 }
 .like-buy-mycart > input{
 	margin-right: 20px;
 	width: 100px;
 	height: 100px;
 	
+}
+
+.button {
+    border: 0;
+    line-height: 2.5;
+    padding: 0 20px;
+    font-size: 1rem;
+    text-align: center;
+    color: #fff;
+    text-shadow: 1px 1px 1px #000;
+    border-radius: 10px;
+    background-color: #FF6A89;
+    background-image: linear-gradient(to top left,
+                                      rgba(0, 0, 0, .2),
+                                      rgba(0, 0, 0, .2) 30%,
+                                      rgba(0, 0, 0, 0));
+    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
+                inset -2px -2px 3px rgba(0, 0, 0, .6);
+}
+
+.button:hover {
+    background-color: rgba(255, 0, 0, 1);
+}
+
+.button:active {
+    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
+                inset 2px 2px 3px rgba(0, 0, 0, .6);
 }
 
 
