--- a/src/main/webapp/css/order.css
+++ b/src/main/webapp/css/order.css
@@ -52,6 +52,7 @@
 #saleTable span, #paymentTable span {
 	color: #b04545;
 	font-size: 9pt;
+	vertical-align: top;
 }
 #saleTable input[type="button"] {
 	background: #39210D;
@@ -99,12 +100,17 @@
 }
 #paymentTable li {
 	display: inline-block;
-	padding-top: 28px;
 	width: 184px;
-	height: 80px;
+	height: 100px;
 	border-left: 1px solid #999;
 	text-align: center;
 	vertical-align: middle;
+	overflow: hidden;
+}
+#paymentTable li img {
+    max-width: 300px;
+    max-height: 110px;
+    margin-top: -6px;
 }
 #paymentTable li:first-child {
 	border-left: none;
