--- a/src/main/webapp/css/stock.css
+++ b/src/main/webapp/css/stock.css
@@ -169,7 +169,9 @@ background: plum;
 }
 
 #stock-color{
+	width: 100%;
 	height: 40%;
+	display: inline-block;
 }
 #stock-index-color{
 	width: 20%;
@@ -186,6 +188,7 @@ background: plum;
 	display: flex;
 }
 .selected{
+	height: 70px;
 	width: 300px;
 }
 .selected option{
@@ -193,14 +196,6 @@ background: plum;
 	text-transform: uppercase;
 	font-size: 20pt;
 	
-}
-div .show-color{
-	width: 70px;
-	height:70px;
-	justify-content: space-evenly;
-}
-#color-index-list > div{
-	display: inline-block;
 }
 #stock-size{
 	width: 100%;
@@ -224,6 +219,8 @@ div .show-color{
 #size-index-list > div{
 	display: inline-block;
 }
+
+
 .stock-detail-para{
 	font-size: 15pt;
 	text-align: left;
@@ -257,7 +254,7 @@ div .show-color{
     color: #fff;
     text-shadow: 1px 1px 1px #000;
     border-radius: 10px;
-    background-color: #FF6A89;
+    background-color: #39210D;
     background-image: linear-gradient(to top left,
                                       rgba(0, 0, 0, .2),
                                       rgba(0, 0, 0, .2) 30%,
@@ -267,7 +264,7 @@ div .show-color{
 }
 
 .button:hover {
-    background-color: rgba(255, 0, 0, 1);
+    background-color: #39110d;
 }
 
 .button:active {
