--- a/src/main/webapp/css/order.css
+++ b/src/main/webapp/css/order.css
@@ -185,3 +185,113 @@
 #section #order #info > table td {
 	width: 100px;
 }
+
+
+/* ----------------------------------------- */
+/* 배송지 관리 */
+#manageShipForm {
+	margin : 20px;
+	font-size: 10pt;
+	float: left;
+}
+#manageShipForm > legend {
+	font-size: 18pt;
+	margin-bottom: 15px;
+}
+#manageShipForm #shipBtnDiv {
+	margin: 20px 0;
+	height: 40px;
+	vertical-align: middle;
+} 
+#manageShipForm #shipBtnDiv > div {
+	float: right;
+	vertical-align: middle;
+}
+#manageShipForm #addShipBtn {
+	height: 35px;
+	background: #39210D;
+	margin-top: -7px;
+	color: white;
+	font-size: 10pt;
+	text-align: right;
+}
+#manageShipForm #baseShipBtn {
+	height: 35px;
+	margin-top: -7px;
+	background: #ccc;
+	font-size: 10pt;
+}
+#manageShipForm #manageShipTable {
+	border-top: 2px solid #39210D; 
+	width: 834px;
+	margin: 20px 0;
+}
+#manageShipForm #manageShipTable th, #manageShipForm #manageShipTable td {
+	border-top: 1px solid #999;
+	border-bottom: 1px solid #999;
+	padding: 5px;
+}
+#manageShipForm #shipInfoDiv {
+	font-size: 18pt;
+	margin-top: 70px;
+}
+#manageShipForm > ul {
+	margin: 10px;
+	padding: 10px;
+}
+#manageShipForm > ul > li {
+	list-style: disc;
+	margin: 10px;
+}
+#manageShipForm:after {
+	content: '';
+	display: block;
+	clear: both;
+}
+
+/* 배송지 추가 */
+#addShipAddrForm{
+	margin: 20px;
+}
+#addShipAddrForm legend {
+	font-size: 15pt;
+	margin-top: 50px;
+	margin-bottom: 20px;
+}
+#addShipAddrForm #addShipAddrTable {
+	border-top: 2px solid #39210D;
+	border-collapse: collapse;
+	margin: 30px 0;
+	font-size: 10pt;
+}
+#addShipAddrForm #addShipAddrTable td {
+	border-top: 1px solid #999;
+	border-bottom: 1px solid #999;
+	padding: 10px;
+}
+#addShipAddrForm #addShipAddrTable tr>td:first-child {
+	background: #eee;	
+}
+#addShipAddrForm #addShipAddrTable input[type="text"] {
+	margin: 2px 0;
+	height: 19px;
+}
+#addShipAddrForm #addShipAddrTable span{
+	color: red;
+}
+#addShipAddrForm #addShipBtnDiv {
+	text-align: center;
+}
+#addShipAddrForm #findShipZipcode {
+	background: white;
+	border: 1px solid #999;
+	height: 25px;
+}
+#addShipAddrForm #addShipCancelBtn {
+	width: 40px;
+	height: 25px;
+}
+#addShipAddrForm #addShipBtn {
+	width: 40px;
+	height: 25px;
+}
