결제완료페이지

--- a/src/main/webapp/css/order.css
+++ b/src/main/webapp/css/order.css
@@ -184,8 +184,13 @@
 	width: 100px;
 }
 
+#section #content #orderCompleteDiv{
+	height: 325px;
+}
 
-
+#section #content #orderCompleteDiv > p {
+	vertical-align: middle;
+}
 /* ----------------------------------------- */
 /* 배송지 관리 */
 #manageShipForm {
