--- a/src/main/webapp/css/order.css
+++ b/src/main/webapp/css/order.css
@@ -230,7 +230,13 @@
 	width: 834px;
 	margin: 20px 0;
 }
-#manageShipForm #manageShipTable th, #manageShipForm #manageShipTable td {
+#manageShipForm #manageShipTable th {
+	text-align: center;
+	border-top: 1px solid #999;
+	border-bottom: 1px solid #999;
+	padding: 5px;
+}
+#manageShipForm #manageShipTable td {
 	border-top: 1px solid #999;
 	border-bottom: 1px solid #999;
 	padding: 5px;
@@ -251,6 +257,13 @@
 	content: '';
 	display: block;
 	clear: both;
+}
+#manageShipForm .updateShipBtn, #manageShipForm .deleteShipBtn {
+	margin: 0 2px;
+	background: #ccc;
+	border: 1px solid #ccc;
+	font-size: 9pt;
+	border-radius: 3px;
 }
 
 /* 배송지 추가 */
@@ -292,6 +305,11 @@
 	color: red;
 	margin: 3px;
 }
+#addShipAddrForm #addShipAddrTable div {
+	font-size: 8pt;
+	color: #aa210D;
+	font-weight: bold;
+}
 #addShipAddrForm #addShipBtnDiv {
 	text-align: center;
 }
@@ -306,14 +324,13 @@
 	font-size: 10pt;
 	border: 1px solid #3E3E3E;
 }
-#addShipAddrForm #addShipBtn {
+#addShipAddrForm #addShipOkBtn {
 	width: 60px;
 	height: 35px;
 	background: #3E3E3E;
 	color: white;
 	font-size: 10pt;
 }
-
 #section #content {
 	width: 80%;
 }
