--- a/src/main/webapp/css/order.css
+++ b/src/main/webapp/css/order.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+ @charset "UTF-8";
 
 #payForm table{
 	margin: 0 auto;
@@ -324,7 +324,7 @@
 	font-size: 10pt;
 	border: 1px solid #3E3E3E;
 }
-#addShipAddrForm #addShipOkBtn {
+#addShipAddrForm #addShipOkBtn, #addShipUpdateBtn {
 	width: 60px;
 	height: 35px;
 	background: #3E3E3E;
