feat: 상품상세페이지 수량선택 수정중!

--- a/src/main/webapp/css/stock.css
+++ b/src/main/webapp/css/stock.css
@@ -273,3 +273,15 @@ background: plum;
 }
 
 
+/* 수량정보넣는곳 */
+
+div.exec{
+	background: darkgreen; 
+	border:10px solid black;
+	height: 100px;
+	text-align: left;
+}
+.exec > div > div{
+	display: inline-block;
+}
+
