--- a/src/main/webapp/css/order.css
+++ b/src/main/webapp/css/order.css
@@ -25,6 +25,12 @@
 #orderTopTable thead th {
 	padding: 30px 50px;
 }
+#orderTopTable tbody td {
+	padding: 5px 10px;
+}
+#orderTopTable #productImg {
+	padding-left: 30px;
+}
 #topDiv {
 	text-align: center;
 	font-size: 18pt;
@@ -90,6 +96,15 @@
 	font-size: 10pt;
 	width: 740px;
 	height: 40px;
+}
+#shipInfoTable #zipcodeBtn {
+	background: #39210D;
+	color: white;
+	font-size: 9pt;
+	width: 111px;
+	height: 31px;
+	margin-top: -3px;
+	 
 }
 #paymentTable ul {
 	margin: 0;
@@ -167,7 +182,7 @@
 }
 
 
-#section #order #shipping, span, #section #order #info {
+#section #order #shipping > span, #section #order #info {
 	display: inline-block;
 	vertical-align: middle;
 }
