--- a/src/main/webapp/css/order.css
+++ b/src/main/webapp/css/order.css
@@ -1,5 +1,8 @@
  @charset "UTF-8";
 
+#payForm {
+	margin-left: 10px;
+}
 #payForm #leftDiv table{
 	margin: 0 auto;
 	padding: 10px;
@@ -56,8 +59,8 @@
 }
 #rightDiv {
 	float: right;
-	/* width: 470px; */
 	height: 1950px;
+	margin-right: 30px;
 }
 #rightDiv #stickyDiv {
 	position: sticky;
@@ -65,7 +68,7 @@
 }
 #rightDiv #payInfoDiv #payInfoTable {
 	background: #f5f5f5;
-	width: 360px;
+	width: 400px;
 	height: 360px;
 }
 #rightDiv #payInfoDiv #payInfoTable th {
@@ -110,7 +113,7 @@
 	color: #b04545;
 	font-weight: bold;
 }
-#payForm input[type="text"], #payForm select {
+#payForm input[type="text"], #payForm input[type="email"], #payForm select {
 	font-size: 10pt;
 	height: 30px;
 }
@@ -118,7 +121,15 @@
 	font-size: 10pt;
 }
 #payBtnTable {
-	width: 360px;
+	width: 400px;
+}
+#payBtnTable #noticeDiv {
+	width: 400px;
+	padding: 5px;
+	margin-top: 10px;
+	color: #b04545;
+	font-size: 9pt;
+	font-weight: bold;
 }
 #payBtnTable tbody td {
 	padding: 0;
@@ -128,14 +139,14 @@
 	background: #39210D;
 	color: white;
 	font-size: 10pt;
-	width: 355px;
+	width: 395px;
 	height: 40px;
 	margin: 0 0 5px 0;
 }
 #orderCancelBtn {
 	background: #ccc;
 	font-size: 10pt;
-	width: 355px;
+	width: 395px;
 	height: 40px;
 	margin: 0 0 5px 0;
 }
