--- a/src/main/webapp/css/stock.css
+++ b/src/main/webapp/css/stock.css
@@ -67,16 +67,7 @@ background: plum;
 	width: 100%;
 	height: 100%;
 	position: relative;
-	margin: 0 auto;
-	padding: 10px;
-    object-fit:cover;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    object-fit:cover;
-    overflow-y: hidden;
-	display: compact;
-	display:inline-block
+	display:inline-block;
 	
 }
 .navigation .prev {
@@ -85,7 +76,6 @@ background: plum;
   font-size: 30px;
   top: 40%;
   left: 10px;
-  font-weight: 800;
 }
 .navigation .next {
   right: 10px;
@@ -93,23 +83,13 @@ background: plum;
   font-size: 30px;
   z-index: 10;
   top: 40%;
-  font-weight: 800;
 }
 .navigation .nav-btn {
-  background: rgba(255, 255, 255, 0.55);
   cursor: pointer;
-  border-radius: 100%;
-  width: 30px;
-  height: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 5px;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
+  font-size: 50pt;
+  color: white;
 }
-.navigation .nav-btn:hover {
-  background: white;
-}
+
 .carousel {
   margin-top: 20px;
   transition: all 0.3s ease;
@@ -119,7 +99,6 @@ background: plum;
   width: 100%;
   height: 100%;
   transition: all 0.3s ease;
-  border:8px solid white;
 }
 
 .item {
@@ -154,7 +133,7 @@ background: plum;
 #stock-title{
 	width: 100%;
 	height: 20%;
-	padding: 10px;
+	padding: 30px;
 }
 #stock-title span{
 	float: left;
@@ -166,6 +145,11 @@ background: plum;
 	width: 100%;
 	height: 30%;
 	float: left;
+	margin-top: 20px;
+}
+
+#stock-list hr {
+	width: 80%;
 }
 
 #stock-color{
@@ -173,11 +157,10 @@ background: plum;
 	height: 40%;
 	display: inline-block;
 }
-#stock-index-color{
+#stock-index-color, #stock-index-size{
 	width: 20%;
 	height: 100%;
-	padding: 30px;
-	margin: 0 auto;
+	padding: 20px 10px 0 10px;
 	float: left;
 }
 #color-index-list{
@@ -185,36 +168,26 @@ background: plum;
 	height: 100%;
 	padding: 10px;
 	position: relative;
-	display: flex;
 }
 .selected{
-	height: 70px;
-	width: 300px;
+	height: 50px;
+	width: 400px;
 }
 .selected option{
 	text-align: center;
 	text-transform: uppercase;
-	font-size: 20pt;
-	
 }
 #stock-size{
 	width: 100%;
 	height: 40%;
 	display: inline-block;
 }
-#stock-index-size{
-	width: 20%;
-	height: 100%;
-	padding: 30px;
-	margin: 0 auto;
-	float: left;
-}
+
 #size-index-list{
 	width: 80%;
 	height: 100%;
 	padding: 10px;
 	position: relative;
-	display: flex;
 }
 #size-index-list > div{
 	display: inline-block;
@@ -226,64 +199,45 @@ background: plum;
 	text-align: left;
 }
 .like-buy-mycart{
-	width: 600px;
-	height: 50px;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	top: 200px;
-	padding: 20px 0;
+	width: 100%;
+	padding: 20px 40px;
 	position: relative;
-	bottom: 0;
 	display: inline-block;
-	text-align: center;
+	text-align: left;
 }
 .like-buy-mycart > input{
-	margin-right: 20px;
-	width: 100px;
-	height: 100px;
-	
+	margin-right: 5px;
+	width: 250px;
+	height: 55px;
 }
 
-.button {
-    border: 0;
-    line-height: 2.5;
-    padding: 0 20px;
-    font-size: 1rem;
-    text-align: center;
-    color: #fff;
-    text-shadow: 1px 1px 1px #000;
-    border-radius: 10px;
+#buyBtn, #mycartBtn {
+	color: white;
     background-color: #39210D;
-    background-image: linear-gradient(to top left,
-                                      rgba(0, 0, 0, .2),
-                                      rgba(0, 0, 0, .2) 30%,
-                                      rgba(0, 0, 0, 0));
-    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
-                inset -2px -2px 3px rgba(0, 0, 0, .6);
 }
-
-.button:hover {
-    background-color: #39110d;
-}
-
-.button:active {
-    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
-                inset 2px 2px 3px rgba(0, 0, 0, .6);
-}
-
 
 /* 수량정보넣는곳 */
 
 div.exec{
 	text-align: left;
 }
+
+.exec > div {
+	margin: 0 50px; 
+}
 .exec > div > div {
 	display: inline-block;
-	margin: 10px 30px;
+	margin: 10px 30px 10px 0;
 }
 
-.exec > input[type='button'] {
-	background: white;
+.exec input[type='button'] {
+	color: black; 
+	background: white; 
+	border: 0.1px solid #999;
+	font-size : 10pt;
+}
+
+.exec .outcount {
+	margin: 0 15px;
 }
 
