--- a/src/main/webapp/css/order.css
+++ b/src/main/webapp/css/order.css
@@ -254,6 +254,8 @@
 
 #section #content #orderCompleteDiv{
 	height: 325px;
+	text-align: center;
+	margin-top: 100px;
 }
 
 #section #content #orderCompleteDiv > p {
